Change "there exists valuation" to "there exists a valuation"

--- a/frap_book.tex
+++ b/frap_book.tex
@@ -2032,7 +2032,7 @@ The intuition behind the rules may come best from working out an example.
 \newcommand{\smallsteps}[2]{#1 \to^* #2}
 
 \begin{theorem}
-  There exists valuation $v$ such that $\smallsteps{(\mupd{\mempty}{\mathtt{input}}{2}, \mathtt{factorial})}{(v, \skipe)}$ and $\msel{v}{\mathtt{output}} = 2$.
+  There exists a valuation $v$ such that $\smallsteps{(\mupd{\mempty}{\mathtt{input}}{2}, \mathtt{factorial})}{(v, \skipe)}$ and $\msel{v}{\mathtt{output}} = 2$.
 \end{theorem}
 
 \begin{proof}
